class AppKeys {
  static const signInEmailField = 'emailField';
  static const signInPasswordField = 'passwordField';
  static const signInButton = 'loginButton';
  static const goToSignUpButton = 'goToSignUpButton';

  static const signUpNameField = 'fullNameField';
  static const signUpEmailField = 'signUpEmailField';
  static const signUpPasswordField = 'signUpPasswordField';
  static const signUpConfirmPasswordField = 'confirmPasswordField';
  static const signUpButton = 'signUpButton';
  static const goToSignInButton = 'goToSignInButton';

  static const homeScreen = 'homeScreen';
  static const logoutButton = 'logoutButton';
}
