import 'package:flutter_patrol_demo/app.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:patrol/patrol.dart';

Future<void> _seedUser(PatrolIntegrationTester $) async {
  await $(#goToSignUpButton).tap();
  await $(#fullNameField).enterText('Awais Amjad');
  await $(#signUpEmailField).enterText('awais@example.com');
  await $(#signUpPasswordField).enterText('secret123');
  await $(#confirmPasswordField).enterText('secret123');
  await $(#signUpButton).tap();
}

void main() {
  patrolTest('Successful login', ($) async {
    await $.pumpWidgetAndSettle(const MyApp());
    await _seedUser($);

    await $(#emailField).enterText('awais@example.com');
    await $(#passwordField).enterText('secret123');
    await $(#loginButton).tap();
    await $.pumpAndSettle();

    expect($(#homeScreen), findsOneWidget);
    expect($('Welcome, Awais Amjad'), findsOneWidget);
  });

  patrolTest('Invalid login', ($) async {
    await $.pumpWidgetAndSettle(const MyApp());
    await _seedUser($);

    await $(#emailField).enterText('awais@example.com');
    await $(#passwordField).enterText('wrong-pass');
    await $(#loginButton).tap();
    await $.pumpAndSettle();

    expect($(#homeScreen), findsNothing);
    expect($(#loginButton), findsOneWidget);
  });
}
